<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="next_button">NEXT</string>
    <string name="prev_button">PREV</string>
    <string name="next_button_desc">Press this button for the next question</string>
    <string name="prev_button_desc">Press this button for the previous question</string>
    <string name="question_australia">Canberra is the capital of Australia.</string>
    <string name="question_oceans">The Pacific Ocean is larger than  the Atlantic Ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea  and the Indian Ocean.</string>
    <string name="question_africa">The source of the Nile River is in Egypt.</string>
    <string name="question_americas">The Amazon River is the longest river  in the Americas.</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest  freshwater lake.</string>
    <string name="warning_text">Are you sure you want to do this?</string>
    <string name="show_answer_button">Show Answer</string>
    <string name="cheat_button">Cheat!</string>
    <string name="judgment_toast">Cheating is wrong.</string>
</resources>